# SDCND-Dev

./: .gitignore  plt_subplots.ipynb
.ipynb_checkpoints/: 1_Finding_Lane_Lines-checkpoint.ipynb  ComputerVision-AdvancedLaneFinding-checkpoint.ipynb  LearningConcepts-checkpoint.ipynb  plt_subplots-checkpoint.ipynb
CarND-Camera-Calibration-master/: camera_calibration.ipynb
CarND-Camera-Calibration-master/.ipynb_checkpoints/: camera_calibration-checkpoint.ipynb
CarND-Camera-Calibration-master/calibration_wide/: wide_dist_pickle.p
DeepLearning/: .gitignore  1_notmnist.ipynb  2_fullyconnected.ipynb  3_regularization.ipynb  4_convolutions.ipynb  5_word2vec.ipynb  6_lstm.ipynb  Exercises.ipynb
DeepLearning/.ipynb_checkpoints/: 1_notmnist-checkpoint.ipynb  Exercises-checkpoint.ipynb
FindingLaneLines/: 1_Finding_Lane_Lines.ipynb
Lab/: .gitignore  MNIST RNN.ipynb  input.txt  lstm-char-reverse.py  min-char-rnn.py  vanilla-rnn.py
Lab/MNIST_GAN/: MNIST_GAN.ipynb  gan.py
MiniFlow/: MiniFlow-StochasticGradientDescent.ipynb  MiniflowNotebook-Matrix.ipynb  MiniflowNotebook-NonMatrix.ipynb
MiniFlow/.ipynb_checkpoints/: MiniFlow-StochasticGradientDescent-checkpoint.ipynb  MiniflowNotebook-Matrix-BackwardPropagation-checkpoint.ipynb  MiniflowNotebook-Matrix-checkpoint.ipynb
TensorFlow/: .gitignore  TensorFlowQuizes.ipynb  model.ckpt.data-00000-of-00001  model.ckpt.index  train_model.ckpt.data-00000-of-00001  train_model.ckpt.index
TensorFlowTutorial/: GettingStarted.ipynb
term2/lesson7/exercises/tests/: CMakeLists.txt  RunAllTests.cpp
term3/: .gitignore
(+53 files in other folders)
